[project]
name = "rom-comma"
version = "1.0.0"
description = "Reduced Order Modelling software, implementing Global Sensitivity Analysis of Gaussian Processes."
authors = ["Robert Milton <r.a.milton@sheffield.ac.uk>", "Aaron Yeardley<asyeardley1@sheffield.ac.uk>"]
license = "BSD 3-Clause"

readme = "README.md"
homepage = "https://github.com/C-O-M-M-A/rom-comma"
repository = "https://github.com/C-O-M-M-A/rom-comma"
documentation = "https://github.com/C-O-M-M-A/rom-comma"

keywords = ["Reduced Order Modelling", "Global Sensitivity Analysis", "Gaussian Process", "Sobol Index", "Screening"]

classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence",
                "Intended Audience :: Science/Research", "Development Status :: 3 - Alpha"]

python = ">=3.9"

[dependencies]
numpy = ">"

[build-system]
requires = [
    "setuptools >= 56.0.0",
    "pip >= 21.0.1",
    "pandas >= 1.2.4",
    "numpy >= 1.20.2",
    "scipy >= 1.6.2",
    "tensorflow >= 2.5.0",
    "tensorflow-probability >= 0.12.2",
    "gpflow >= 2.1.5",
    "pyDOE2 >= 1.3.0"
]
build-backend = "setuptools.build_meta"
