#  BSD 3-Clause License.
#
#  Copyright (c) 2019-2021 Robert A. Milton. All rights reserved.
#
#  Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
#
#  1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
#
#  2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
#     documentation and/or other materials provided with the distribution.
#
#  3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
#     software without specific prior written permission.
#
#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
#  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
#  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
#  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
#  EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

[project]
name = "rom-comma"
version = "1.0.0"
description = "Reduced Order Modelling software, implementing Global Sensitivity Analysis of Gaussian Processes."
authors = ["Robert Milton <r.a.milton@sheffield.ac.uk>"]
license = "BSD 3-Clause"

readme = "README.md"
homepage = "https://github.com/C-O-M-M-A/rom-comma"
repository = "https://github.com/C-O-M-M-A/rom-comma"
documentation = "https://github.com/C-O-M-M-A/rom-comma"

keywords = ["Reduced Order Modelling", "Global Sensitivity Analysis", "Gaussian Process", "Sobol Index", "Screening"]

classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence",
                "Intended Audience :: Science/Research", "Development Status :: 3 - Alpha"]

python = ">=3.9"

[dependencies]
numpy = ">"

[build-system]
requires = [
    "setuptools >= 56.0.0",
    "pip >= 21.0.1",
    "pandas >= 1.2.4",
    "numpy >= 1.20.2",
    "scipy >= 1.6.2",
    "tensorflow >= 2.5.0",
    "gpflow >= 2.2.1",
]
build-backend = "setuptools.build_meta"
