#  BSD 3-Clause License.
#
#  Copyright (c) 2019-2024 Robert A. Milton. All rights reserved.
#
#  Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
#
#  1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
#
#  2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
#     documentation and/or other materials provided with the distribution.
#
#  3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
#     software without specific prior written permission.
#
#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
#  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
#  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
#  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
#  EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

[project]
name = "rom-comma"
version = "1.0.0"
description = "Reduced Order Modelling software, implementing Global Sensitivity Analysis using Gaussian Processes."
authors = [
    {name = "Robert Milton", email="r.a.milton@sheffield.ac.uk"}
]
license = { text = "BSD 3-Clause" }
readme = "README.md"
keywords = ["Reduced Order Modelling", "Global Sensitivity Analysis", "Gaussian Process", "Sobol ClosedSobol", "Screening"]
classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence",
                "Intended Audience :: Science/Research", "Development Status :: 4 - Beta"]

dependencies = [
    "gpflow >= 2.2.1, <= 2.5.2",
    "pandas >= 1.2.4",
    "SALib >= 1.4.6",
]

[tool.setuptools.packages.find]
where = [""]
include = ["romcomma*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[project.optional-dependencies ]
dev = [
    "Sphinx >= 6.3.1",
    "cloud-sptheme >= 1.10"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=40.8.0", "wheel"]
python = ">= 3.10 < 3.11"

[project.urls]
homepage = "https://github.com/C-O-M-M-A/rom-comma"
repository = "https://github.com/C-O-M-M-A/rom-comma"
documentation = "https://c-o-m-m-a.github.io/rom-comma/"
